website/websites/gp4/code/knucleotide-scala.log
BUILD COMMANDS FOR: knucleotide.scala

Thu Mar 22 12:13:03 PDT 2007

( if [ ! -d knucleotide.scala_run ] ; then mkdir knucleotide.scala_run ; fi)
cp /home/dunham/gp4/shootout/bench/knucleotide/knucleotide.scala knucleotide.scala_run/knucleotide.scala
( cd knucleotide.scala_run ; /opt/scala-2.4.0/bin/scalac knucleotide.scala )
knucleotide.scala:87: error: not found: type HashTable
class HashBag[A] extends HashTable[A] {
                         ^
knucleotide.scala:90: error: not found: value entries
   def elements = entries
                  ^
knucleotide.scala:93: error: not found: value table
      var bucket = table(index(elemHashCode(elem)))
                   ^
knucleotide.scala:95: error: not found: value elemEquals
         if (elemEquals(entryKey(bucket.head), elem)){
             ^
knucleotide.scala:101: error: not found: value addEntry
      addEntry(new Entry(elem, 1))
      ^
knucleotide.scala:105: error: not found: value table
      var bucket = table(index(elemHashCode(elem)))
                   ^
knucleotide.scala:107: error: not found: value elemEquals
         if (elemEquals(entryKey(bucket.head), elem)){
             ^
7 errors found
make[3]: [knucleotide.scala_run] Error 1 (ignored)
touch knucleotide.scala_run

=================================================================
COMMAND LINE (%A is single numeric argument):

 JAVACMD="/opt/sun-jdk-1.6.0/bin/java $JDKFLAGS -server" /opt/scala-2.4.0/bin/scala -classpath knucleotide.scala_run knucleotide %A
************************************************************
*   TEST (knucleotide.scala_run) FAILED - ERROR:  knucleotide.scala_out differs from Output.10000
************************************************************
-rw-r--r-- 1 dunham users 245 Dec 29 20:51 Output.10000
-rw-r--r-- 1 dunham users  26 Mar 22 12:13 knucleotide.scala_out


PROGRAM OUTPUT
==============
no such file: knucleotide
